--- a/watch.html
+++ b/watch.html
@@ -11,8 +11,8 @@
   <script>const SERVER = "https://pikko1.tcpexposer.com";</script>
   <script src="https://unpkg.com/wavesurfer.js"></script>
   <script src="js/dark.js"></script>
-  <link rel="stylesheet" href="css/animation.css" type="text/css">
-  <link rel="stylesheet" href="css/dark.css" type="text/css">
+  <link rel="stylesheet" href="css/animation.css">
+  <link rel="stylesheet" href="css/dark.css">
   <style>
     body {
       font-family: sans-serif;
@@ -43,6 +43,25 @@
     button:hover {
       background: #09c;
     }
+    .lockIcon {
+      width: 16px;
+      height: 16px;
+      vertical-align: middle;
+      margin-left: 4px;
+    }
+    .author {
+      display: flex;
+      align-items: center;
+      margin-top: 4px;
+      margin-bottom: 6px;
+    }
+    .author img {
+      width: 40px;
+      height: 40px;
+      border-radius: 5px;
+      margin-right: 8px;
+      object-fit: cover;
+    }
   </style>
 </head>
 <body class="bg-animation">
@@ -71,15 +90,23 @@
           return;
         }
 
-        document.title = `${info.title} by ${info.username} - Pikko Videos`;
+        document.title = `${info.title} - Pikko Videos`;
         const ext = info.fileName.split(".").pop().toLowerCase();
         const isAudio = ext === "mp3" || ext === "wav";
-
         const mediaUrl = `${SERVER}/videos/${info.fileName}`;
+        const lockIcon = info.hasPassword ? `<img src="img/lock.svg" alt="locked" class="lockIcon">` : "";
+        const postedTime = new Date(info.date).toLocaleString("ja-JP", {
+          year: "numeric", month: "2-digit", day: "2-digit", hour: "2-digit", minute: "2-digit"
+        });
 
         if (info.hasPassword) {
           content.innerHTML = `
-            <h1>${info.title} by ${info.username}</h1>
+            <h1>${info.title} ${lockIcon}</h1>
+            <div class="author">
+              <img src="${SERVER}/icons/${info.username}.jpg" alt="icon">
+              <a href="user?name=${encodeURIComponent(info.username)}">${info.username}</a>
+            </div>
+            <div style="font-size: 0.9em;">${postedTime}</div>
             <p>This video or music is locked. Please enter the password to watch.</p>
             <input type="password" id="passInput" placeholder="Password" style="padding: 6px;">
             <button onclick="checkAccess()">Unlock</button>
@@ -96,7 +123,7 @@
               .then(res => res.ok ? res.json() : null)
               .then(result => {
                 if (result?.access) {
-                  showMedia();
+                  showMedia(info, mediaUrl, isAudio, lockIcon, postedTime);
                 } else {
                   document.getElementById("errorMsg").textContent = "Incorrect password.";
                 }
@@ -106,10 +133,10 @@
               });
           };
         } else {
-          showMedia();
+          showMedia(info, mediaUrl, isAudio, lockIcon, postedTime);
         }
 
-        function showMedia() {
+        function showMedia(info, mediaUrl, isAudio, lockIcon, postedTime) {
           const playerHtml = isAudio ? `
             <div id="waveform"></div>
             <div id="controls"><button id="togglePlay">play</button></div>
@@ -118,7 +145,12 @@
           `;
 
           content.innerHTML = `
-            <h1>${info.title} by ${info.username}</h1>
+            <h1>${info.title} ${lockIcon}</h1>
+            <div class="author">
+              <img src="${SERVER}/icons/${info.username}.jpg" alt="icon">
+              <a href="user?name=${encodeURIComponent(info.username)}">${info.username}</a>
+            </div>
+            <div style="font-size: 0.9em;">${postedTime}</div>
             ${playerHtml}
             <p style="white-space: pre-wrap; margin-top: 1em;">${info.description}</p>
           `;
