--- a/user.html
+++ b/user.html
@@ -41,6 +41,7 @@
   <a href="./"><img src="logo.png" alt="logo" width="200" height="100"></a>
   <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
   <h1>User page</h1>
+  <p><button onclick="copyUrl()">Copy URL</button></p>
   <div id="info"></div>
   <h2>videos and musics</h2>
   <div id="list"></div>
@@ -80,6 +81,14 @@
         `).join("");
         document.getElementById("list").innerHTML = list || "No videos yet.";
       });
+    function copyUrl() {
+    const element = document.createElement('input');
+    element.value = location.href;
+    document.body.appendChild(element);
+    element.select();
+    document.execCommand('copy');
+    document.body.removeChild(element);
+}
   </script>
 </body>
 </html>
