--- a/user.html
+++ b/user.html
@@ -41,7 +41,7 @@
   <a href="./"><img src="logo.png" alt="logo" width="200" height="100"></a>
   <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
   <h1>User page</h1>
-  <p><button onclick="copyUrl()">Copy URL</button></p>
+  <p><button onclick="copyUrl()">share</button></p>
   <div id="info"></div>
   <h2>videos and musics</h2>
   <div id="list"></div>
