--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </style>
 </head>
 <body class="bg-animation">
-  <a href="./"><img src="logo.png" alt="logo" width="200" height="100"></a>
+  <a href="./"><img class="logo" src="logo.png" alt="logo" width="200" height="100"></a>
   <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
   <table>
     <tr>
