--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
 
 <body class="bg-animation">
 
-    <a href="./"><img src="https://videos.bird.f5.si/logo.png" alt="logo" width="200" height="100"></a>
+    <a href="./"><img class="logo" src="https://videos.bird.f5.si/logo.png" alt="logo" width="200" height="100"></a>
     <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
     <p><font color="red">Pikko and Pikko Videos couldn't find the page you were looking for.</font></p>
 
