--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="favicon.ico">
   </head>
   <body class="bg-animation">
-    <a href="./"><img src="logo.png" alt="logo" width="200" height="100"></a>
+    <a href="./"><img class="logo" src="logo.png" alt="logo" width="200" height="100"></a>
     <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
     <h1>What service is this?</h1>
     <p>This is a video posting service.</p>
