--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
   <link rel="icon" href="favicon.ico">
 </head>
 <body class="bg-animation">
-  <a href="./"><img src="logo.png" alt="logo" width="200" height="100"></a>
+  <a href="./"><img class="logo" src="logo.png" alt="logo" width="200" height="100"></a>
   <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
   <h1>signup</h1>
   <input id="username" placeholder="name"><br>
