--- a/terms.html
+++ b/terms.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="favicon.ico">
   </head>
   <body class="bg-animation">
-    <a href="./"><img src="logo.png" alt="logo" width="200" height="100"></a>
+    <a href="./"><img class="logo" src="logo.png" alt="logo" width="200" height="100"></a>
     <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
     <h1>terms</h1>
     <p>･By using this service, you are deemed to have agreed to the terms of use of this service (hereinafter referred to as the "These terms").</p>
