--- a/user.html
+++ b/user.html
@@ -38,7 +38,7 @@
   </style>
 </head>
 <body class="bg-animation">
-  <a href="./"><img src="logo.png" alt="logo" width="200" height="100"></a>
+  <a href="./"><img class="logo" src="logo.png" alt="logo" width="200" height="100"></a>
   <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
   <h1>User page</h1>
   <p><button onclick="copyUrl()">share</button></p>
