--- a/watch.html
+++ b/watch.html
@@ -65,7 +65,7 @@
   </style>
 </head>
 <body class="bg-animation">
-  <a href="./"><img src="logo.png" alt="logo" width="200" height="100" /></a>
+  <a href="./"><img class="logo" src="logo.png" alt="logo" width="200" height="100" /></a>
   <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
   <table>
     <tr>
