--- a/you.html
+++ b/you.html
@@ -23,7 +23,7 @@
   </style>
 </head>
 <body class="bg-animation">
-  <a href="./"><img src="https://videos.bird.f5.si/logo.png" alt="logo" width="200" height="100"></a>
+  <a href="./"><img class="logo" src="https://videos.bird.f5.si/logo.png" alt="logo" width="200" height="100"></a>
   <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
   <p><input type="button" value="share" onclick="copyUrl()"></p>
 
