--- a/you.html
+++ b/you.html
@@ -52,7 +52,7 @@
   <input id="titleInput" placeholder="title"><br>
   <h3>video or music (.mp4 / .mp3 / .wav, 30MB or less)</h3>
   <input id="fileInput" type="file" accept="video/mp4,audio/mp3,audio/wav"><br>
-  <h3>thumbnail (.jpg / 50KB or less)</h3>
+  <h3>thumbnail (.jpg, 640px×360px / 640px×480px / 360px×640px, 50KB or less)</h3>
   <input type="checkbox" id="useThumbUpload"> upload custom thumbnail?<br>
   <input id="thumbInput" type="file" accept=".jpg" disabled><br>
   <h3>description</h3>
