--- a/you.html
+++ b/you.html
@@ -21,7 +21,7 @@
       margin-left: 4px;
     }
     .upload_button {
-      background: #0af;
+      background: lightgreen;
       color: white;
       border: none;
       padding: 8px 14px;
