--- a/you.html
+++ b/you.html
@@ -22,7 +22,7 @@
     }
     .upload_button {
       background: lightgreen;
-      color: white;
+      color: blue;
       border: none;
       padding: 8px 14px;
       font-size: 14px;
