--- a/you.html
+++ b/you.html
@@ -29,7 +29,7 @@
       cursor: pointer;
       border-radius: 4px;
     }
-    button:hover {
+    .upload_button:hover {
       background: #09c;
     }
   </style>
