--- a/terms.html
+++ b/terms.html
@@ -22,6 +22,8 @@
     <p>･Do not submit videos or text that other users may find offensive.</p>
     <p>･Do not use it in a manner that violates the Constitution.</p>
     <p>･Malicious accounts and videos will be deleted without prior notice.</p>
+    <p>･Your data is not fully protected and may be exposed.</p>
     <p>･These terms may be changed without prior notice.</p>
+    <p>･This service may be terminated without notice.</p>
   </body>
 </html>
